--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   {
     question: "デザイン工学部は文系選択の学生でも入学することが出来る",
     correct: true,
-    explanation: "デザイン工学部では学科や入試方式によって、文系選択の学生でも受験できる可能性があります。例えば、システムデザイン学科：T日程／英語外部試験利用は「数学Ⅲ」の出題範囲ではなく、建築学科：B方式では「国語」と「理科」の科目のうち、1科目選択です。※詳細は入試ガイドや入試要項を必ず確認しましょう。"
+    explanation: "デザイン工学部では学科や入試方式によって、文系選択の学生でも受験できる可能性があります。例えば、システムデザイン学科：T日程／英語外部試験利用は「数学Ⅲ」が出題範囲ではなく、建築学科：B方式では「国語」と「理科」の科目のうち、1科目選択です。※詳細は入試ガイドや入試要項を必ず確認しましょう。"
   },
   {
     question: "受験方式の中で、共通テスト利用なのは、B方式、C方式である",
